libreoffice (1:6.1.0~alpha1-2) UNRELEASED; urgency=medium

  * debian/rules:
    - move also the -help-common parts to /usr/share

 -- Rene Engelhard <rene@debian.org>  Sat, 28 Apr 2018 10:08:11 +0200

libreoffice (1:6.1.0~alpha1-1) experimental; urgency=medium

  * New upstream alpha release
    - fixes cross-file links with xlsx files (closes: #658569)
    - apparently preserves conditional formatting with copy paste operations
      (again) (closes: #868349)

  * debian/patches/no-packagekit-per-default.diff: use the new config options
    to disable the packagekit install stuff

  * debian/rules:
    - install TestExtension.oxt into a new libreoffice-smoketest-data package
      which can be used by autopkgtests
    - enable gtk3_kde vclplug (closes: #752230) and "kde5" (kde5be)
    - re-enable pdfium on arm64 again; is now not using its internal allocator
      anymore
    - use new $(call java_dependency, default-jdk) for default-jdk builddep
  * debian/tests/*: add autopkgtest to test install TestExtension.oxt
    (user and shared)
  * debian/tests/*: add initial version of a autopkgtest to run the smoketest,
    build smoketestdoc.sxw here for now (and a full build...). Disabled for now.
  * debian/control.transitionals.in: add -kde -> kde5 transitional package
  * debian/libreoffice-sdbc-firebird.bug-script.in: remove, firebird not
    experimental anymore
  * debian/control.in:
    - update for new icon defaults, make -common depend on -style-colibre and
      -gnome recommend -style-elementary
  * debian/control*in, debian/rules, debian/libreoffice-help-common.doc-base:
    build with --with-help=html and split common files into a new
    libreoffice-help-common

  * merge from Ubuntu:
    - debian/patches/hide-maths-desktop-file.patch: hide
      math icon from the shell (see #883734)

 -- Rene Engelhard <rene@debian.org>  Fri, 27 Apr 2018 04:57:42 +0000

libreoffice (1:6.0.4~rc1-4) unstable; urgency=medium
