@@ -1,7 +1,0 @@
-Document: libreoffice-help
-Title: LibreOffice @lo_sources_ver@ Help
-Author: The Document Foundation
-Section: Programming
-
-Format: HTML
-Index: /usr/share/libreoffice/help/index.html
