@@ -1,0 +1,7 @@
+Document: libreoffice-help-@LCODE@
+Title: LibreOffice Help (@LCODE@)
+Author: The Document Foundation
+Section: Office
+
+Format: HTML
+Index: /usr/share/libreoffice/help/@LCODE@/text/shared/main0108.html
