@@ -1,7 +1,12 @@
 libreoffice (1:6.1.0~alpha1-2) UNRELEASED; urgency=medium
 
+  * debian/libreoffice-help-common.doc-base: ... rename
+  * debian/libreoffice-help.doc-base.in: ... here and only use as template.
+    Update Index: for localized "index" (text/shared/main0108.html) and fix
+    Section:
   * debian/rules:
     - move also the -help-common parts to /usr/share
+    - create/populate libreoffice-help-xx .doc-base files
 
  -- Rene Engelhard <rene@debian.org>  Sat, 28 Apr 2018 10:08:11 +0200
 
